hphp/hack/test/typecheck/references/refs_in_array/binding_new_element1.php.exp
File "binding_new_element1.php", line 6, characters 11-11:
An expression is expected here. (Parsing[1002])
